--- a/style.css
+++ b/style.css
@@ -212,8 +212,24 @@ legend {
     pointer-events: none;
 }
 
-.btn:hover,
-#setavoltar:hover {
+@media screen and (orientation:landscape) {
+    .btn:hover,
+    #setavoltar:hover {
+        background-color: white;
+        color: var(--corbtn);
+        border: 5px solid var(--corbtn);
+        box-shadow: 
+        0px 0px 25px 10px rgb(0, 255, 187),
+        0px 0px 50px 10px rgba(0, 255, 187, 0.84),
+        0px 0px 75px 10px rgb(0, 255, 187, 0.68),
+        0px 0px 100px 10px rgb(0, 255, 187, 0.52),
+        0px 0px 50px 10px rgb(0, 255, 187, 0.36),
+        0px 0px 200px 10px rgb(0, 255, 187, 0.2);
+        transform: scale(1.15);
+    }
+}
+
+.btnHover {
     background-color: white;
     color: var(--corbtn);
     border: 5px solid var(--corbtn);
